# PHAS0100Assignment1

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md
CMake/: CTestContinuous.cmake.in  CTestCustom.cmake.in  golSetupTesting.cmake
Code/: CMakeLists.txt
Code/CommandLineApps/: CMakeLists.txt  gofSimulator.cpp  golMyFirstApp.cpp  stationaryPatterns.cpp
Code/Lib/: CMakeLists.txt  DataStructure.cpp  DataStructure.h  gameEvolution.cpp  gameEvolution.h  golBasicTypes.cpp  golBasicTypes.h  golException.cpp  golException.h  golExceptionMacro.h  golMyFunctions.cpp  golMyFunctions.h
Testing/: CMakeLists.txt  golBasicTest.cpp  golCatchMain.cpp  golCatchMain.h  golCommandLineArgsTest.cpp
Testing/Data/: glider.txt  oscillators.txt  still_lifes.txt
